--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -13,6 +13,8 @@ body {
     color: var(--main-text-color);
 }
 .logo {
+padding-top: 24px;
+padding-bottom: 25px;
 margin-right: 85px;
 font-family: var(--secondary-font)
 font-style: normal;
@@ -39,10 +41,6 @@ color:#000000;
     margin-left: auto;
     margin-right: auto;
 }
-.header {
-    padding-top: 24px;
-    padding-bottom: 25px;
-    }
 .header .container {
     display: flex;
     align-items: center;
@@ -63,6 +61,8 @@ color:#000000;
 }
 .navigation-list {
 display: flex;
+margin-top: 0px;
+margin-bottom: 0px;
 }
 .navigation-link {
 padding-top: 32px;
@@ -100,8 +100,8 @@ color: var(--aksent-color);
 .hero {
     display: flex;
     background-color: rgba(47, 48, 58, 0.8);
-    padding-left: 317px;
-    padding-right: 317px;
+    padding-left: 452px;
+    padding-right: 452px;
     padding-top: 200px;
     padding-bottom: 280px;
 }
@@ -183,7 +183,6 @@ color: var(--title-light-theme-color)
     justify-content: center;
     margin-top: 0px;
     margin-bottom: 0px;
-    background: rgba(47, 48, 58, 0.8);
 }
 .team {
     background: #F5F4FA;
@@ -233,7 +232,7 @@ color: var(--title-light-theme-color)
 }
 .subtitle-box {
 text-align: center;
-color: var(--title-dark-theme-color);
+color: var(--title-light-theme-color);
 }
 .subtitle-name {
     margin-bottom: 10px;
@@ -368,10 +367,10 @@ border: transparent;
     display: flex;
     align-items: center;
     justify-content: center;
+    padding-top: 93px;
     padding-bottom: 50px;
 }
 .button {
-    
     margin-right: 8px;
     padding-top: 6px;
     padding-bottom: 6px;
